--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+htmlcov/
 venv/
 env
+notebooks/scratch/
 .ropeproject/
 .DS_Store
 .vscode
@@ -67,6 +69,9 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# PyCharm Patch #
+# Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
 *.iml
 modules.xml
